src/test/ui/rfc-2005-default-binding-mode/borrowck-issue-49631.stderr
error[E0502]: cannot borrow `foo` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-issue-49631.rs:20:9
   |
LL |     while let Some(Ok(string)) = foo.get() {
   |                                  ---     - immutable borrow ends here
   |                                  |
   |                                  immutable borrow occurs here
LL |         foo.mutate();
   |         ^^^ mutable borrow occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
